k8s-manifests/influxdb2/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: influxdb2
  namespace: monitoring
  labels:
    app.kubernetes.io/name: influxdb2
    app.kubernetes.io/component: db
    app.kubernetes.io/part-of: monitoring
    app.kubernetes.io/environment: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "100"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - influx.server.home
  rules:
    - backendRefs:
        - name: influxdb2
          namespace: monitoring
          port: 80
